# MediaPlayer

./: .gitignore  CMakeLists.txt  generate_fidl.sh
cgen/commonapi_dbus_generator/: artifacts.xml
dbus-1.12.16/: Makefile  config.h  config.status  dbus-1-uninstalled.pc  dbus-1.pc  libtool
dbus-1.12.16/bus/: Makefile  dbus-daemon  dbus-daemon-launch-helper
dbus-1.12.16/dbus/: Makefile  dbus-asv-util.lo  dbus-auth-script.lo  dbus-auth-util.lo  dbus-connection.c  dbus-connection.c.orig  dbus-connection.c.rej  dbus-credentials-util.lo  dbus-mainloop.lo  dbus-marshal-byteswap-util.lo  dbus-marshal-recursive-util.lo  dbus-marshal-validate-util.lo  dbus-message-factory.lo  dbus-message-util.lo  dbus-shell.lo  dbus-socket-set-epoll.lo  dbus-socket-set-poll.lo  dbus-socket-set.lo  dbus-spawn.lo  dbus-string-util.lo  dbus-sysdeps-util-unix.lo  dbus-sysdeps-util.lo  dbus-test.lo  dbus-userdb-util.lo  libdbus-1.la  libdbus-internal.la  libdbus_1_la-dbus-address.lo  libdbus_1_la-dbus-auth.lo  libdbus_1_la-dbus-bus.lo  libdbus_1_la-dbus-connection.lo  libdbus_1_la-dbus-credentials.lo  libdbus_1_la-dbus-dataslot.lo  libdbus_1_la-dbus-errors.lo  libdbus_1_la-dbus-file-unix.lo  libdbus_1_la-dbus-file.lo  libdbus_1_la-dbus-hash.lo  libdbus_1_la-dbus-internals.lo  libdbus_1_la-dbus-keyring.lo  libdbus_1_la-dbus-list.lo  libdbus_1_la-dbus-marshal-basic.lo  (+33 more)
dbus-1.12.16/doc/: Makefile  dbus-daemon.1.xml
fidl/: MediaPlayer.fidl  MediaPlayerTypes.fidl
src/: DevMediaPlayer.cpp  DevMediaPlayer.h  IMediaPlayer.h  MediaPlayerComponent.cpp  MediaPlayerComponent.h  main.cpp
(+132 files in other folders)
